<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:id="@+id/MyCardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/marginstart"
        android:foreground="?selectableItemBackground">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false">

            <TextView
                android:id="@+id/textViewStartDateOrTargetDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/StartOrTarget"
                app:layout_constraintBottom_toBottomOf="@+id/textViewDate"
                app:layout_constraintEnd_toStartOf="@+id/textViewDate"
                app:layout_constraintHorizontal_bias="0.855"
                app:layout_constraintStart_toStartOf="@+id/guideline20"
                app:layout_constraintTop_toTopOf="@+id/textViewDate"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.3" />

            <TextView
                android:id="@+id/textViewDays"
                android:layout_width="118dp"
                android:layout_height="56dp"
                android:layout_marginTop="8dp"
                android:text="@string/days"
                android:textAlignment="center"
                android:textSize="40sp"
                app:layout_constraintBottom_toTopOf="@+id/textViewUntilOrSince"
                app:layout_constraintEnd_toStartOf="@+id/guideline20"
                app:layout_constraintStart_toStartOf="@+id/guideline12"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="333" />

            <TextView
                android:id="@+id/textViewUntilOrSince"
                android:layout_width="86dp"
                android:layout_height="22dp"
                android:layout_marginBottom="8dp"
                android:text="@string/daysSinceUntil"
                android:textAlignment="center"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline20"
                app:layout_constraintHorizontal_bias="0.456"
                app:layout_constraintStart_toStartOf="@+id/guideline12"
                app:layout_constraintTop_toBottomOf="@+id/textViewDays"
                tools:text="Days Until" />

            <TextView
                android:id="@+id/textViewEvent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/event"
                android:textAlignment="center"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline13"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline20"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.235"
                tools:text="Christmas Day" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.01" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.99" />

            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="56dp"
                android:layout_marginBottom="4dp"
                android:text="@string/date"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline13"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>